# surreal-id

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml  scheduled.yml  test.yml
src/: errors.rs  lib.rs  new_id.rs
tests/: proptest.proptest-regressions  proptest.rs  user_id_integration.rs
