[package]
name = "surreal-id"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A package for easily creating ID types for usage with surrealdb"
repository = "https://github.com/liamwh/surreal-id.git"
authors = ["Liam Woodleigh-Hardinge", "liam.woodleigh@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "^1.0"
thiserror = "^1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde = "1.0.193"
tokio = "1.33.0"
surrealdb = { features = ["kv-mem"], version = "^1.0" }
proptest = "1.5.0"
rand = "0.8.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
